Updated index.html with a new line

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <main>
       <header>
-        <h2>hello I&apos;m Emon</h2>
+        <h2>Hello I&apos;m Emon</h2>
+        <p>I read in honors first years in physics department.</p>
       </header>
     </main>
   </body>
