--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <main>
       <header>
+        <div>
+          <img
+            src="img_hello_world.jpg"
+            alt="Hello World from Space"
+            style="width: 100%; max-width: 960px" />
+        </div>
         <h2>Hello I&apos;m Emon</h2>
         <p>I read in honors first years in physics department.</p>
       </header>
