--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <header>
         <h2>Hello I&apos;m Emon</h2>
         <p>I read in honors first years in physics department.</p>
+        <p>This is here to show how merging works</p>
       </header>
     </main>
   </body>
