added a new line to earth-images

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <h2>Hello I&apos;m Emon</h2>
         <p>I read in honors first years in physics department.</p>
+        <p>This is for the thirst for knowledge.</p>
       </header>
     </main>
   </body>
