nav and h3 section was added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <main>
       <header>
+        <nav>
+          <a>home</a>
+          <a>about</a>
+          <a>services</a>
+        </nav>
         <div>
           <img
             src="img_hello_world.jpg"
@@ -26,6 +31,10 @@
             style="width: 100%; max-width: 640px" />
         </div>
       </header>
+      <section>
+        <h3>This was created in github code editor.</h3>
+        <p>I&apos;m writing these section of the code to check how does it work and how&apos;s the accuracy rate.</p>
+      </section>
     </main>
   </body>
 </html>
