Updated HTML & CSS files

--- a/index.html
+++ b/index.html
@@ -3,38 +3,165 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Azizul Basher Emon</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
     <main>
       <header>
-        <nav>
-          <a>home</a>
-          <a>about</a>
-          <a>services</a>
-        </nav>
-        <div>
-          <img
-            src="img_hello_world.jpg"
-            alt="Hello World from Space"
-            style="width: 100%; max-width: 640px" />
-        </div>
-        <h2>Hello I&apos;m Emon</h2>
-        <p>I read in honors first years in physics department.</p>
-        <p>This is here to show how merging works</p>
-        <p>This is for the thirst for knowledge.</p>
-        <div>
-          <img
-            src="img_hello_git.jpg"
-            alt="Hello git"
-            style="width: 100%; max-width: 640px" />
+        <div class="logo-continer">
+          <a href="#">Azizul Basher Emon</a>
         </div>
       </header>
       <section>
-        <h3>This was created in github code editor.</h3>
-        <p>I&apos;m writing these section of the code to check how does it work and how&apos;s the accuracy rate.</p>
+        <div>
+          <h3>Hello World!</h3>
+          <h2>It&apos;s Azizul Basher Emon here.</h2>
+          <p>I&apos;m a frontend web-developer based in Dhaka,Bangladesh.</p>
+          <a href="mailto:emon.availabl4@gmail.com">Contact Me</a>
+        </div>
+        <nav>
+          <ul>
+            <!--<li><a href="#">Home</a></li>-->
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">My Skills</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">My Projects</a></li>
+            <li><a href="#educations">Education</a></li>
+          </ul>
+        </nav>
       </section>
+      <section id="about">
+        <div>
+          <h2>About Me</h2>
+          <p>
+            As a self-taught programmer, I thrive on creating software for
+            various platforms. My journey began with curiosity, and I&apos;ve
+            been honing my skills through continuous learning. Versatility is my
+            strength, I explore web development, backend programming, and mobile
+            apps. In collaborative environments, I value diverse perspectives
+            and effective communication. Quality code matters more than rushing
+            features, and I respect deadlines. Lifelong learning fuels my
+            passion. I devour programming resources, attend conferences, and
+            contribute to open-source projects.
+          </p>
+        </div>
+      </section>
+      <section id="skills">
+        <div>
+          <h2>My Skills</h2>
+          <div
+            >Here are some of the tolls and technologies I&apos;m currently
+            working with</div
+          >
+        </div>
+        <div>
+          <h3>Frontend</h3>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Tailwind CSS</li>
+            <li>JavaScript (Still learning)</li>
+            <li>Typescript (Still learning)</li>
+            <li>React JS(Still learning)</li>
+            <li>Next JS (Still learning)</li>
+            <li>Bootstrap (Still learning)</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Backend</h3>
+          <ul>
+            <li>Node JS (Learning in process)</li>
+            <li>Express JS (Learning in process)</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Database</h3>
+          <ul>
+            <li>MySQL (Learning in process)</li>
+            <li>MongoDB (Learning in process)</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Tolls&amp;others</h3>
+          <ul>
+            <li>Git (Learning in process)</li>
+            <li>GitHub (Learning in process)</li>
+            <li>REST API (Learning in process)</li>
+            <li>Material UI (Learning in process)</li>
+          </ul>
+        </div>
+      </section>
+      <section id="experience">
+        <div>
+          <h2>Experience</h2>
+          <div
+            >Aspiring for new opportunities and working on open-source
+            projects</div
+          >
+        </div>
+        <div>
+          <h3>Frontend Developer (Freelancer)</h3>
+          <div>01 Jul, 2024 - Present date.</div>
+          <p
+            >Developed frontend solutions for various projects, including a cake
+            shop website with full functionality. Demonstrated expertise in
+            creating dynamic and intuitive user interfaces, incorporating real
+            data to enhance user experience.</p
+          >
+        </div>
+      </section>
+      <section id="projects">
+        <div>
+          <h2>Projects</h2>
+          <div>Some of the projects I&apos;ve done</div>
+        </div>
+        <div>
+          <h4>Image Search</h4>
+          <div>
+            This is a website I created using Unsplash API. It can search the
+            input and give result based on input.
+          </div>
+          <a href="https://search-image-by-emon.netlify.app/" target="_blank">
+            View Project
+          </a>
+        </div>
+        <div>
+          <h4>Project 2</h4>
+          <div>Project 2 description</div>
+          <a href="#">View Project</a>
+        </div>
+        <div>
+          <h4>Project 3</h4>
+          <div>Project 3 description</div>
+          <a href="#">View Project</a>
+        </div>
+      </section>
+      <section id="education">
+        <div>
+          <h2>Education</h2>
+        </div>
+        <div>
+          <h3>BSC (Department of Physics)</h3>
+          <div>Tongi Govt. College(2024 - Present)</div>
+        </div>
+        <div>
+          <h3>HSC (Science Stream)</h3>
+          <div>Bhaluka Govt. College(2020-2022)</div>
+        </div>
+      </section>
+      <footer>
+        <div>|&copy;Azizul Basher Emon All Right Reserved|</div>
+        <div>
+          <a href="https://www.linkedin.com/in/emon-available" target="_blank"
+            >Linkedin</a
+          >
+          <a href="https://www.github.com/emon96bd" target="_blank">Github</a>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
