updated contact button

--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
       </header>
       <section>
         <div>
-          <h3>Hello World!</h3>
+          <h3 class="helllo-world">Hello World!</h3>
           <h2>It&apos;s Azizul Basher Emon here.</h2>
           <p>I&apos;m a frontend web-developer based in Dhaka,Bangladesh.</p>
-          <a href="mailto:emon.availabl4@gmail.com">Contact Me</a>
+          <a
+            href="mailto:emon.availabl4@gmail.com
+          "
+            id="contact-btn"
+            >Contact Me</a
+          >
         </div>
         <nav>
           <ul>
