--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet" />
+    <link
+      rel="short icon"
+      href="img/person-protection-security-svgrepo-com.svg" />
   </head>
   <body>
     <main>
